--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,12 @@
 name = "conman"
 version = "0.1.0"
 edition = "2021"
+description = "manager your dotfiles securely using git"
 
 [dependencies]
+anyhow = "1.0.95"
+directories = "6.0.0"
+serde = { version = "1.0.217", features = ["derive"] }
+toml = "0.8.19"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
