--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.217", features = ["derive"] }
 toml = "0.8.19"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+clap = { version = "4.5.27", features = ["derive"] }
