--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ toml = "0.8.19"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 clap = { version = "4.5.27", features = ["derive"] }
+git2 = { version = "0.20.0", default-features = false, features = ["openssl-probe", "openssl-sys", "ssh"] }
+url-parse = "1.0.10"
