--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ clap = { version = "4.5.27", features = ["derive"] }
 git2 = { version = "0.20.0", default-features = false, features = ["openssl-probe", "openssl-sys", "ssh"] }
 url-parse = "1.0.10"
 age = "0.11.1"
+shellexpand = "3.1.0"
