--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ git2 = { version = "0.20.0", default-features = false, features = ["openssl-prob
 url-parse = "1.0.10"
 age = "0.11.1"
 shellexpand = "3.1.0"
+colored = "3.0.0"
