--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ url-parse = "1.0.10"
 age = "0.11.1"
 shellexpand = "3.1.0"
 colored = "3.0.0"
+dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
