--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ age = "0.11.1"
 shellexpand = "3.1.0"
 colored = "3.0.0"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
+edit = "0.1.5"
