--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ shellexpand = "3.1.0"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 edit = "0.1.5"
 crossbeam-channel = "0.5.14"
+
+[dev-dependencies]
+rand = "0.9.0"
